Fri Jul  1 08:42:27 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp
	* DAnCE/NodeManager/NodeDaemon_Impl.cpp
	
	Fixed compile errors with emulated exceptions turned on.
	
Thu Jun 30 23:34:40 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * DAnCE/tests/Minimum/Receiver/Receiver_exec.cpp:
        * DAnCE/tests/Minimum/Receiver/Receiver_exec.h:
        * DAnCE/tests/Minimum/Sender/Sender_exec.cpp:
        * DAnCE/tests/Minimum/Sender/Sender_exec.h:
        
          More overlooked changes to exec files corresponding to
          CIDL compiler code generation changes of
          
          Wed Jun 22 23:20:04 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

Thu Jun 30 12:36:06 2005  William Otte  <wotte@atl.lmco.com>

	* DAnCE/Plan_Launcher/DAM_Map.cpp
	* DAnCE/Plan_Launcher/DAM_Map.h
	* DAnCE/Plan_Launcher/Plan_Launcher.mpc

	Added DAM_Map to the Plan_Launcher directory, as make wouldn't
	handle the relative reference properly.
	
Thu Jun 30 09:29:24 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* DAnCE/new_RepositoryManager/RMadmin.cpp
	* DAnCE/new_RepositoryManager/RepositoryManager.cpp
	* DAnCE/new_RepositoryManager/ZIP_Wrapper.cpp
	* DAnCE/new_RepositoryManager/ZIP_Wrapper.h
	* DAnCE/new_RepositoryManager/new_RepositoryManager_Impl.cpp
	* DAnCE/new_RepositoryManager/new_RepositoryManager_Impl.h

	Fixed Doxygen documentation tags, fixed some indenting,
	removed tabs.

Thu Jun 30 09:59:17 2005  William Otte  <wotte@atl.lmco.com>

	* DAnCE/Plan_Launcher/Plan_Launcher.cpp
	* DAnCE/Plan_Launcher/Plan_Launcher.mpc
	* DAnCE/Plan_Launcher/Plan_Launcher_Impl.cpp
	* DAnCE/Plan_Launcher/Plan_Launcher_Impl.h

	Factored out the plan launcher capability into a shared library so
	applications can use its functionality. 

Thu Jun 30 04:33:35 2005 ming xiong <mxiong@dre.vanderbilt.edu>

       * DAnCE/ComponentPackager/Base_Packager.h
       * DAnCE/ComponentPackager/CPK_Packager.cpp